deploying dev.html

--- a/dev.html
+++ b/dev.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>pagee Title</title>
+  <title>page Title</title>
 </head>
 
 <body>
-This is dev environment......
+This is dev environment final deployment with job auto53
 </body>
 
 </html>
